<resources>
    <string name="app_name">nMedia</string>
    <string name="nmedia">NMedia!!</string>
    <string name="avtor" translatable="false">Нетология.Университет интернет-профессий будущего</string>
    <string name="datePost" translatable="false">05 Марта 2023 15:24 </string>
    <string name="content" translatable="false"> Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растем сами и помогаем расти студентам: от новичков до увлеченных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставит хотеть больше, целиться выше, бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен -> https://netology.ru </string>
    <string name="like" translatable="false"> 10 </string>
    <string name="viewing" translatable="false">2000</string>
    <string name="share" translatable="false">20000</string>
    <string name="likes" translatable="false">100000</string>
    <string name="viewing_content" translatable="false">viewing</string>
    <string name="netology1" translatable="false">netology</string>
    <string name="shareContetnt" translatable="false">share</string>
    <string name="likesContent" translatable="false">likes</string>
    <string name="menucontent" translatable="false">menuContent</string>
    <string name="remove">Remove</string>
    <string name="content_text">Content</string>
    <string name="not_be_empty">Content must not be empty</string>
    <string name="edit">Edit post</string>
    <string name="number" translatable="false">1000</string>
    <string name="cant_be_empty">Content must not be empty</string>
    <string name="add_buttom" translatable="false">add Buttom</string>
    <string name="vidioplay">vidioPlay</string>
    <string name="link_video">Link video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_new_post">User %1$s posted a new post:</string>
    <string name="text_post" translatable="false">%1$s </string>

</resources>