<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_post">


    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/netology1"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/avtor"
        app:layout_constraintEnd_toStartOf="@id/menuImegeView"
        app:layout_constraintStart_toEndOf="@id/avatarImageView"
        app:layout_constraintTop_toTopOf="@id/avatarImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuImegeView"
        style="@style/MenuStyle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/menucontent"
        app:icon="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:iconGravity="textTop"
        />

    <TextView
        android:id="@+id/dataPostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/datePost"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="dataPostTextView,avatarImageView,menuImegeView" />

    <TextView
        android:id="@+id/video"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@mipmap/video"
        android:textColor="@android:color/transparent"
        android:clickable="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/vidioplay"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/contentTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:ignore="InvalidId" />

    <ImageButton
        android:id="@+id/videoPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintBottom_toBottomOf="@id/video"
        app:layout_constraintEnd_toEndOf="@id/video"
        app:layout_constraintTop_toTopOf="@+id/video"
        app:srcCompat="@drawable/baseline_play_circle_24"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vidioplay"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:maxHeight="490dp"
        android:paddingBottom="16dp"
        android:text="@string/content"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="contentTextView"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/likesContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        android:checkable="true"
        android:backgroundTint="@android:color/transparent"
        tools:checkable="true"
        android:text="@string/number"
        app:icon="@drawable/ic_like"
        style="@style/LikeStyle"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareImageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/shareContetnt"
        android:text="@string/number"
        app:layout_constraintStart_toEndOf="@id/likeImageView2"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:icon="@drawable/baseline_share_24"
        style="@style/ShareStyle"/>


    <TextView
        android:id="@+id/viewingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:maxLength="4"
        android:text="@string/viewing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"

        />

    <ImageView
        android:id="@+id/viewingImageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/viewing_content"
        app:layout_constraintEnd_toStartOf="@id/viewingTextView"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/baseline_visibility_24" />


</androidx.constraintlayout.widget.ConstraintLayout>